# ai-engineering-hub

./: README.md
Build-reasoning-model/: Own_reasoning_model_with_GRPO.ipynb  README.md
Colivara-deepseek-website-RAG/: README.md  app.py  rag_code.py
DeepSeek-finetuning/: Fine_tune_DeepSeek.ipynb  README.md
LaTeX-OCR-with-Llama/: README.md
Multi-Agent-deep-researcher-mcp-windows-linux/: PLEASE_READ.txt  README.md  agents.py  app.py  pyproject.toml  server.py
Multi-Agent-deep-researcher-mcp-windows-linux/mcp-linux/: README.md  agents.py  server.py
Website-to-API-with-FireCrawl/: README.md  notebook.ipynb
Youtube-trend-analysis/: README.md  app.py
acp-code/: README.md  acp_client.py
agent-with-mcp-memory/: .env.example  README.md  demo.ipynb  pyproject.toml  server.py
agent2agent-demo/: agent1.py  agent2.py  agent3.py  notebook.ipynb
agentic_rag/: README.md  agentic_rag.ipynb  app.py  demo_llama3.2.ipynb
agentic_rag_deepseek/: README.md  app_deep_seek.py
ai_news_generator/: app.py
audio-analysis-toolkit/: README.md  app.py  requirements.txt  server.py
autogen-stock-analyst/: README.md  coding_and_financial_analyst.ipynb
book-writer-flow/: README.md  notebook.ipynb
book-writer-flow/book_flow/book_writing_flow/: .env.example  README.md  pyproject.toml
book-writer-flow/book_flow/book_writing_flow/src/: book.md
book-writer-flow/book_flow/book_writing_flow/src/book_writing_flow/: main.py
book-writer-flow/book_flow/book_writing_flow/src/book_writing_flow/crews/Outline_crew/: outline_crew.py
book-writer-flow/book_flow/book_writing_flow/src/book_writing_flow/crews/Outline_crew/config/: agents.yaml  tasks.yaml
book-writer-flow/book_flow/book_writing_flow/src/book_writing_flow/crews/Writer_crew/: writer_crew.py
book-writer-flow/book_flow/book_writing_flow/src/book_writing_flow/crews/Writer_crew/config/: agents.yaml  tasks.yaml
book-writer-flow/book_flow/book_writing_flow/src/book_writing_flow/tools/: custom_tool.py
brand-monitoring/: README.md
brand-monitoring/brand_monitoring_flow/: .env.example  pyproject.toml
brand-monitoring/brand_monitoring_flow/src/: brand_monitoring_app.py
brand-monitoring/brand_monitoring_flow/src/brand_monitoring_flow/: main.py
brand-monitoring/brand_monitoring_flow/src/brand_monitoring_flow/crews/X_crew/: X_crew.py
brand-monitoring/brand_monitoring_flow/src/brand_monitoring_flow/crews/X_crew/config/: agents.yaml  tasks.yaml
brand-monitoring/brand_monitoring_flow/src/brand_monitoring_flow/crews/instagram_crew/: instagram_crew.py
brand-monitoring/brand_monitoring_flow/src/brand_monitoring_flow/crews/instagram_crew/config/: agents.yaml  tasks.yaml
brand-monitoring/brand_monitoring_flow/src/brand_monitoring_flow/crews/linkedin_crew/: linkedin_crew.py
brand-monitoring/brand_monitoring_flow/src/brand_monitoring_flow/crews/linkedin_crew/config/: agents.yaml  tasks.yaml
brand-monitoring/brand_monitoring_flow/src/brand_monitoring_flow/crews/web_crew/: web_crew.py
brand-monitoring/brand_monitoring_flow/src/brand_monitoring_flow/crews/web_crew/config/: agents.yaml  tasks.yaml
brand-monitoring/brand_monitoring_flow/src/brand_monitoring_flow/crews/youtube_crew/: youtube_crew.py
brand-monitoring/brand_monitoring_flow/src/brand_monitoring_flow/crews/youtube_crew/config/: agents.yaml  tasks.yaml
brand-monitoring/brand_monitoring_flow/src/brand_monitoring_flow/tools/: custom_tool.py
chat-with-audios/: README.md  app.py  rag_code.py
chat-with-code/: README.md  app.py  notebook.ipynb  pyproject.toml  validation.py
code-model-comparison/: .env.example  .opik.config  README.md  app.py  code_evaluation_opik.py  code_ingestion.py  model_service.py  notebook.ipynb  pyproject.toml
content_planner_flow/: README.md  notebook.ipynb  scheduler.py
corrective-rag/: app.py  workflow.py
cursor_linkup_mcp/: README.md  pyproject.toml  server.py
deepseek-thinking-ui/: app.py
deploy-agentic-rag/: .env.example  README.md  client.py  server.py
document-chat-rag/: README.md  main_self_hosted_vectorDB.ipynb
documentation-writer-flow/: Building_Code_Documentation_Agents_Local.ipynb  README.md  crew.py  documentation_flow.py  main.py  pyproject.toml  server.py  utils.py
documentation-writer-flow/config/: documentation_agents.yaml  documentation_tasks.yaml  planner_agents.yaml  planner_tasks.yaml
documentation-writer-flow/schemas/: models.py
eval-and-observability/: README.md  demo.ipynb
eyelevel-mcp-rag/: .env.example  README.md  pyproject.toml
fastest-rag-milvus-groq/: .gitignore  README.md  app.py  rag.py  start_server.py
fastest-rag-stack/: app.py  notebook.ipynb  sambanova.ipynb
financial-analyst-deepseek/: .gitignore  README.md  building-financial-analyst.ipynb  finance_crew.py  notebook.ipynb  pyproject.toml  server.py
firecrawl-agent/: app.py  pyproject.toml  workflow.py
flight-booking-crew/: app.py
gemma3-ocr/: README.md  (+1 more)
gpt-oss-vs-qwen3/: .env.example  README.md  app.py  code_evaluation_opik.py  model_service.py  pyproject.toml  test_system.py
hotel-booking-crew/: README.md  app.py  app_openai.py  kayak.py  pyproject.toml
llama-4-rag/: README.md  app.py  pyproject.toml
llamaindex-mcp/: README.md  ollama_client.ipynb  pyproject.toml  server.py
paralegal-agent-crew/: .env.example  .gitignore  README.md  app.py  pyproject.toml
paralegal-agent-crew/config/: settings.py
paralegal-agent-crew/examples/: test.py
paralegal-agent-crew/src/embeddings/: embed_data.py
paralegal-agent-crew/src/generation/: rag.py
paralegal-agent-crew/src/indexing/: milvus_vdb.py
paralegal-agent-crew/src/retrieval/: retriever_rerank.py
paralegal-agent-crew/src/tools/: firecrawl_search_tool.py
paralegal-agent-crew/src/workflows/: agent_workflow.py  events.py
rag-sql-router/: README.md  app.py  city_database.sqlite  notebook.ipynb  pyproject.toml  tools.py  workflow.py  workflow_all_flows.html
sonnet4-vs-o4/: README.md  app.py  code_ingestion.py  model_service.py  pyproject.toml
ultimate-ai-assitant-using-mcp/: README.md  mcp_streamlit_app.py  pyproject.toml  requirements.txt  server.py
(+183 files in other folders)
