[project]
name = "documentation-writer-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.114.0",
    "crewai-tools>=0.40.1",
    "ipykernel>=6.29.5",
    "langchain-huggingface>=0.1.2",
    "ollama>=0.4.7",
    "tqdm>=4.67.1",
]
