[project]
name = "firecrawl-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "firecrawl-py>=2.4.1",
    "ipython>=9.2.0",
    "llama-index>=0.12.33",
    "llama-index-embeddings-fastembed>=0.3.1",
    "llama-index-llms-lmstudio>=0.3.0",
    "llama-index-readers-web>=0.3.9",
    "llama-index-vector-stores-qdrant>=0.6.0",
    "lmstudio>=1.3.0",
    "qdrant-client>=1.14.2",
    "streamlit>=1.44.1",
]
