[project]
name = "hotel-booking-crew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browserbase>=1.2.0",
    "crewai-tools>=0.38.1",
    "html2text>=2024.2.26",
    "playwright>=1.51.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.44.1",
]
