[project]
name = "deepeval_code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "deepeval>=3.0.0",
    "gitingest>=0.1.4",
    "ipykernel>=6.29.5",
    "litellm>=1.71.1",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
]
